Level-5: Implemented error handling to event logic